# no_code_one

backend_fastAPi/: .gitignore  README.md  main.py  prompt.md  pyproject.toml
backend_fastAPi/models/: request_models.py  response_models.py
backend_fastAPi/routes/: generate.py  prd.py
backend_fastAPi/services/: agent_service.py  llm_service.py  prd_service.py
client/: .gitignore  package-lock.json  package.json
client/src/: App.css  App.tsx  theme.ts
client/src/components/: ChatPanel.tsx  ChatThread.tsx  EditorPanel.tsx  Layout.tsx  PRDPanel.tsx  RequirementForm.tsx
client/src/types/: chat.ts
client/src/utils/: codeFormatter.ts
plan/: ai_agent_expansion.txt  repel.txt  todo1.txt  todo2.txt
plan/existing /: js.txt
